--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "juicer07",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "homework for training purposes only",
-  "main": "jicer.mjs",
+  "main": "juicer.mjs",
   "scripts": {
     "test": "none"
   },
@@ -23,5 +23,9 @@
   "bugs": {
     "url": "https://github.com/MiroQA/JS101-Test-Automation/issues"
   },
-  "homepage": "https://github.com/MiroQA/JS101-Test-Automation#readme"
+  "homepage": "https://github.com/MiroQA/JS101-Test-Automation#readme",
+  "dependencies": {
+    "juicer": "^1.0.1"
+  },
+  "devDependencies": {}
 }
